________________________________________________________________________________

                      Win32::SharedFileOpen, Version 4.03
________________________________________________________________________________

Revision history for Perl extension Win32::SharedFileOpen.
_________________

v4.03 TODO

    - Made code Perl::Critic clean.
    - Simplified and corrected Makefile.PL requirements.
_________________

v4.02 30 May 2014

    - Simplified repository metadata for cleaner appearance on search.cpan.org.
_________________

v4.01 19 May 2014

    - Changed all time() calls to Time::HiRes::time() calls to improve accuracy
      and (hopefully) to fix occasional test failures in t/12_variables.t.
_________________

v4.00 16 May 2014

    - Fixed occasional test failures in t/10_fsopen_fh_leak.t and
      t/11_sopen_fh_leak.t by avoiding the problem of trying to open a file with
      a pending delete.  Also avoided similar possible test failures in
      t/06_fsopen_access.t, t/07_sopen_access.t and t/12_variables.pod.

    - Added support for the 'R', 'S', 'T' and 'D' characters in the mode string
      argument to fsopen().  These were added to the Microsoft C library
      function _fsopen() in Visual Studio 2012 (VC11), but we can support them
      regardless of which compiler is being used (except for Borland C++) since
      we are emulating the function now.

    - The functionality to automatically retry opening a file if it could not be
      opened due to a sharing violation now works for perls built with the
      Borland C++ compiler as a result of now emulating the _fsopen() and
      _sopen() functions.  The known bug in various t\06_fsopen_access.t tests
      failing with Borland C++ is also resolved by the same change.

    - Rewrote most of the XS code to emulate, rather than directly expose, the
      Microsoft C library functions _fsopen() and _sopen().

      This has been done using the Win32 API function CreateFile() and Perl's