@@ -38,4 +38,5 @@ t/09_sopen_share.t                       See if sopen() share modes work
 t/10_fsopen_fh_leak.t                    See if fsopen() leaks filehandles
 t/11_sopen_fh_leak.t                     See if sopen() leaks filehandles
 t/12_variables.t                         See if $ErrStr, $Trace and $Retry variables work
-t/13_pod.t                               See if POD is OK
+t/13_critic.t                            See if coding style is OK
+t/14_pod.t                               See if POD is OK
