@@ -8,6 +8,7 @@ _________________
 
 v4.03 TODO
 
+    - Added optional Perl::Critic testing.
     - Made code Perl::Critic clean.
     - Simplified and corrected Makefile.PL requirements.
 _________________
